# casper-atomic-algorand

./: .KEY.example  .gitignore  Makefile  README.md  principle.md  requirements.txt
algorand/: .env.example  compile.sh  contract.py  test.py
atomic_swap/: Cargo.toml
atomic_swap/src/: error.rs  helper.rs  main.rs  validator.rs
erc20_token/: Cargo.toml
test-net/: .env.example  algorand.py  helper.py  test.py
tests/: Cargo.toml
tests/src/: integration_tests.rs
tests/wasm/: atomic_swap.wasm  erc20_token.wasm
