[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.3"
casper-types = "1.3.3"
sha3 = {version = "0.9.1",default-features = false}
hex = { version = "0.4", default-features = false }

[[bin]]
name = "atomic_swap"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

