[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
casper-engine-test-support = { version = "1.3.3", features = ["test-support"] }
casper-erc20 = { version = "0.2.0", features = ["std"] }
casper-types = { version = "1.3.3", features = ["std"] }
hex = "0.4.3"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

